--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    body {
+        font-size: 14px;
+        font-weight: 500;
+    }
+    svg {
+        width: 1em;
+        height: 1em;
+        position: relative;
+        flex-shrink: 0;
+        display: inline-block;
+    }
+}
